--- a/web-fenix/src/main/webapp/index.xhtml
+++ b/web-fenix/src/main/webapp/index.xhtml
@@ -5,6 +5,7 @@
 <title>Te lo prestamos - fenix</title>
 </head>
 <body>
-	<h1>Hola mundo</h1>
+	<H1>Prueba web fenix</H1>
+	#{holaMundoBean1.mensaje}
 </body>
 </html>
