Uso de comboBox
Se modifican los metos hash y equals para que funcionen los converter del combobox. Se quitan las relaciones de estos metodos y solo se deja evaluando la cedula

--- a/web-fenix/src/main/webapp/infoPregunta.xhtml
+++ b/web-fenix/src/main/webapp/infoPregunta.xhtml
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<LABEL>Cedula:</LABEL> <label>#{preguntaBean.cedula}</label><BR/>
+	<LABEL>Cedula:</LABEL> <label>#{preguntaBean.cedulaCliente}</label><BR/>
 	<LABEL>Fecha:</LABEL> <label>#{preguntaBean.fecha}</label><BR/>
 </body>
 </html>
