Crear cliente web
Se crea un cliente con todos sus atributos

--- a/web-fenix/src/main/webapp/infoPregunta.xhtml
+++ b/web-fenix/src/main/webapp/infoPregunta.xhtml
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
-<title>Insert title here</title>
+<title>Detalle cita asesoria</title>
 </head>
 <body>
 	<LABEL>Cedula:</LABEL> <label>#{preguntaBean.cedulaCliente}</label><BR/>
