--- a/web-fenix/src/main/webapp/index.xhtml
+++ b/web-fenix/src/main/webapp/index.xhtml
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8"/>
-<title>Te lo prestamos - fenix</title>
-</head>
-<body>
-	<H1>Prueba web fenix</H1>
-	#{holaMundoBean1.mensaje}
-</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
+
+<ui:composition template="/WEB-INF/template.xhtml">
+
+	<ui:define name="contenido">
+	   <div>
+	   <p:growl />
+	   		<h1>Bienvenido al banco Fenix</h1> 
+	   </div> 
+	   
+	</ui:define>
+</ui:composition>
 </html>
