--- a/web-fenix/src/main/webapp/index.xhtml
+++ b/web-fenix/src/main/webapp/index.xhtml
@@ -14,7 +14,9 @@
 	   <p:growl />
 	   		<h1>Bienvenido al banco Fenix</h1> 
 	   </div> 
-	   
+	   <h:form>     
+    <p:growl id="messages" showDetail="true" />
+</h:form>
 	</ui:define>
 </ui:composition>
 </html>
