--- a/web-fenix/src/main/webapp/registrarPrestamo.xhtml
+++ b/web-fenix/src/main/webapp/registrarPrestamo.xhtml
@@ -45,6 +45,7 @@
 				<label>Valor:</label>
 				<p:inputText id="prestamoValor"
 					placeholder="Ingrese el valor del prestamo" required="true"
+					onkeypress="if(event.which &lt; 48 || event.which &gt; 57) return false;"
 					requiredMessage="Por favor ingresa el valor del prestamo"
 					value="#{prestamoBean.valorPrestamo}">
 				</p:inputText>
@@ -61,6 +62,7 @@
 				<p:inputText id="prestamoNumeroCuotas"
 					placeholder="Ingrese el valor del prestamo" required="true"
 					requiredMessage="Por favor ingresa el valor del prestamo"
+					onkeypress="if(event.which &lt; 48 || event.which &gt; 57) return false;"
 					value="#{prestamoBean.numeroCuotas}">
 					<f:convertNumber integerOnly="true" type="number" />
 				</p:inputText>
@@ -78,7 +80,7 @@
 				</p:selectOneMenu>
 				<br />
 
-				<h:commandButton value="Aceptar"
+				<h:commandButton ajax="false" value="Aceptar"
 					action="#{prestamoBean.registrarPrestamo}" />
 
 			</p:panelGrid>
