--- a/web-fenix/src/main/webapp/WEB-INF/template.xhtml
+++ b/web-fenix/src/main/webapp/WEB-INF/template.xhtml
@@ -34,8 +34,8 @@
 						<p:password value="#{seguridadBean.usuario.contrasenia}" />
 
 						<br />
-						<p:commandButton value="Aceptar"  icon="fa fa-sign-in-alt" ajax="false"
-							action="#{seguridadBean.login}" />
+						<p:commandButton value="Aceptar" icon="fa fa-sign-in-alt"
+							ajax="false" action="#{seguridadBean.login}" />
 					</h:panelGrid>
 					<p:growl id="messages" showDetail="true" />
 				</h:form>
@@ -45,19 +45,18 @@
 		<h:panelGroup rendered="#{seguridadBean.autenticado}">
 			<ui:insert name="menu">
 				<h:form>
-					<p:growl id="messages" />
+
 					<p:menubar>
 						<p:submenu label="Clientes" icon="fa fa-angle-right">
 							<p:submenu label="New" icon="pi pi-briefcase">
 								<p:menuitem value="Project" url="#" />
 								<p:menuitem value="Other" url="#" />
 							</p:submenu>
-							<p:menuitem value="Open" url="#" />
-							<p:separator />
-							<p:menuitem value="Quit" url="#" />
+							<p:menuitem value="Registrar" url="/registrarCliente.xhtml" />
+							<p:menuitem value="Lista" url="/listaClientes.xhtml" />
 						</p:submenu>
 
-						<p:submenu label="Edit" icon="pi pi-pencil">
+						<p:submenu label="Prestamos" icon="pi pi-pencil">
 							<p:menuitem value="Undo" url="#" icon="pi pi-angle-double-left" />
 							<p:menuitem value="Redo" url="#" icon="pi pi-angle-double-right" />
 						</p:submenu>
@@ -89,16 +88,15 @@
 							icon="pi pi-times" />
 
 						<f:facet name="options">
-							<p:inputText style="margin:1px 10px 1px 1px;"
-								placeholder="Search" />
 							<p:commandButton action="#{seguridadBean.cerrarSesion}"
 								ajax="false" value="Salir" icon="fa fa-sign-out-alt" />
 						</f:facet>
 					</p:menubar>
+					<p:growl id="messages" showDetail="true" />
 				</h:form>
 			</ui:insert>
 			<ui:insert name="contenido">
-			
+				
     			Content area.  Template
   			</ui:insert>
 		</h:panelGroup>
