Pago de cuota y lista de prestamos
Se crea una lista de prestamos y se crea el pago de cuotas

--- a/web-fenix/src/main/webapp/WEB-INF/template.xhtml
+++ b/web-fenix/src/main/webapp/WEB-INF/template.xhtml
@@ -56,8 +56,8 @@
 							<p:menuitem value="Lista" url="/listaClientes.xhtml" />
 						</p:submenu>
 
-						<p:submenu label="Prestamos" icon="pi pi-pencil">
-							<p:menuitem value="Undo" url="#" icon="pi pi-angle-double-left" />
+						<p:submenu label="Prestamos" icon="fa fa-angle-right">
+							<p:menuitem value="Lista" url="/listaPrestamos.xhtml"  />
 							<p:menuitem value="Redo" url="#" icon="pi pi-angle-double-right" />
 						</p:submenu>
 
